Multi drop completed

--- a/app/src/main/res/drawable/bggradient.xml
+++ b/app/src/main/res/drawable/bggradient.xml
@@ -6,7 +6,7 @@
             <gradient
                 android:angle="270"
                 android:startColor="@color/colorPrimary"
-                android:endColor="@color/colorAccent"
+                android:endColor="#16395C"
                 />
         </shape>
     </item>
