--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,9 +7,8 @@
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:layout_marginBottom="@dimen/_minus15sdp"
-        android:background="@drawable/loginbg">
+        android:background="@color/white">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -18,8 +17,8 @@
             android:gravity="center"
             android:orientation="vertical">
             <ImageView
-                android:layout_width="@dimen/_124sdp"
-                android:layout_height="@dimen/_110sdp"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_250sdp"
 
                 android:src="@drawable/appicon"/>
 
