--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,12 +16,12 @@
     <color name="black_text_color">#df000000</color>
     <color name="view_bg">#1A1A1A</color>
     <color name="view_grey_bg">#d2d2d2</color>
-
+    <color name="edit_bg">#EDEDED</color>
     <!-- EditText inside effect color -->
     <color name="cancel_ride_color">#B0B0B0</color>
     <color name="test">#f5f5f5</color>
     <color name="surge_txt_bg">#999999</color>
-
+    <color name="suggestion_color">#a4a4ac</color>
     <color name="cpb_white">@android:color/white</color>
 
     <color name="app_blue_color">#1A1A1A</color>
