Molpay integration done

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -16,10 +16,10 @@
         <ImageView
             android:id="@+id/backArrow"
             android:src="@drawable/back_icon"
-            android:layout_width="@dimen/_24sdp"
-            android:layout_height="@dimen/_32sdp"
-
-            android:padding="@dimen/_2sdp"/>
+            android:layout_width="@dimen/_20sdp"
+            android:layout_gravity="center"
+            android:layout_height="@dimen/_20sdp"
+            />
 
         <com.wherego.delivery.user.Utils.MyTextView
             android:text="@string/change_password_title"
