--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -3,7 +3,6 @@
     android:id="@+id/parent_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
     <FrameLayout
@@ -11,14 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="@dimen/_minus25sdp"
-        android:background="@drawable/loginbg">
+        android:background="@color/white">
 
         <ImageView
             android:id="@+id/imgBack"
-            android:layout_width="@dimen/_24sdp"
-            android:layout_height="@dimen/_32sdp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:tint="@color/black"
+            android:src="@drawable/back_icon"
             android:background="@drawable/back_icon"
 
             />
