--- a/app/src/main/res/layout/activity_privacy_policy.xml
+++ b/app/src/main/res/layout/activity_privacy_policy.xml
@@ -11,12 +11,12 @@
 
         <ImageView
             android:id="@+id/backArrow"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_gravity="center_vertical"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_gravity="center"
+            android:layout_height="@dimen/_20sdp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-
+android:tint="@color/black"
             android:src="@drawable/back_icon" />
 
         <com.wherego.delivery.user.Utils.MyTextView
