--- a/app/src/main/res/layout/activity_user_chat.xml
+++ b/app/src/main/res/layout/activity_user_chat.xml
@@ -20,8 +20,8 @@
             android:layout_width="@dimen/_24sdp"
             android:layout_height="@dimen/_36sdp"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="@dimen/_2sdp"
             android:layout_marginStart="@dimen/_5sdp"
+            android:padding="@dimen/_3sdp"
             android:src="@drawable/back_icon" />
 
         <TextView
