--- a/app/src/main/res/layout/activity_user_review.xml
+++ b/app/src/main/res/layout/activity_user_review.xml
@@ -13,12 +13,10 @@
 
         <ImageView
             android:id="@+id/backArrow"
-            android:layout_width="@dimen/_24sdp"
-            android:layout_height="@dimen/_32sdp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/_10sdp"
-
-
+            android:layout_width="@dimen/_20sdp"
+            android:layout_gravity="center"
+            android:layout_height="@dimen/_20sdp"
+            android:layout_marginLeft="@dimen/_8sdp"
             android:src="@drawable/back_icon" />
 
         <TextView
