--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#05529f</color>
+    <color name="colorPrimary">#2466a8</color>
     <color name="colorPrimaryDark">#134A81</color>
     <color name="colorAccent">#e31e25</color>
     <color name="colorButton">#05529f</color>
