--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -28,11 +28,10 @@
                     <ImageView
                         android:id="@+id/backArrow"
                         android:background="@drawable/back_icon"
-                        android:layout_width="@dimen/_24sdp"
-                        android:layout_height="@dimen/_32sdp"
-    
+                        android:layout_width="@dimen/_20sdp"
+                        android:layout_gravity="center"
+                        android:layout_height="@dimen/_20sdp"
                         android:layout_margin="10dp"
-                    
                         android:padding="5dp"/>
 
                     <TextView
