--- a/app/src/main/res/layout/activity_location_and_goods.xml
+++ b/app/src/main/res/layout/activity_location_and_goods.xml
@@ -17,11 +17,13 @@
 
         <ImageView
             android:id="@+id/backArrow"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
             android:layout_gravity="center_vertical"
             android:contentDescription="@string/app_name"
+            android:layout_marginLeft="@dimen/_5sdp"
             android:padding="5dp"
+            android:tint="@color/black"
             android:src="@drawable/back_icon" />
 
         <TextView
