--- a/app/src/main/res/layout/activity_pick_up_notes.xml
+++ b/app/src/main/res/layout/activity_pick_up_notes.xml
@@ -16,8 +16,9 @@
 
         <ImageView
             android:id="@+id/imgBack"
-            android:layout_width="@dimen/_24sdp"
-            android:layout_height="@dimen/_32sdp"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_gravity="center"
+            android:layout_height="@dimen/_20sdp"
             android:paddingStart="@dimen/_5sdp"
             android:src="@drawable/back_icon"
      />
