--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -20,8 +20,9 @@
 
             <ImageView
                 android:id="@+id/backArrow"
-                android:layout_width="@dimen/_24sdp"
-                android:layout_height="@dimen/_36sdp"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_gravity="center"
+                android:layout_height="@dimen/_20sdp"
                 android:layout_margin="10dp"
                 android:background="@drawable/back_icon"
                 android:padding="5dp" />
