--- a/app/src/main/res/layout/activity_refer.xml
+++ b/app/src/main/res/layout/activity_refer.xml
@@ -9,9 +9,11 @@
     tools:context=".Activities.ReferActivity">
     <ImageView
         android:id="@+id/imgback"
-        android:layout_width="@dimen/_24sdp"
-        android:layout_height="@dimen/_32sdp"
+        android:layout_width="@dimen/_20sdp"
+        android:layout_gravity="start"
+        android:layout_height="@dimen/_20sdp"
         android:layout_margin="@dimen/_15sdp"
+        android:tint="@color/black"
         android:src="@drawable/back_icon"/>
 
     <LinearLayout
