--- a/app/src/main/res/layout/activity_schedule_list.xml
+++ b/app/src/main/res/layout/activity_schedule_list.xml
@@ -17,11 +17,11 @@
 
         <ImageView
             android:id="@+id/backArrow"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="match_parent"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="@dimen/_10sdp"
-            android:padding="@dimen/_7sdp"
+            android:tint="@color/black"
             android:src="@drawable/back_icon" />
 
         <com.wherego.delivery.user.Utils.MyTextView
