--- a/app/src/main/res/layout/activity_tracking_details.xml
+++ b/app/src/main/res/layout/activity_tracking_details.xml
@@ -18,10 +18,11 @@
 
         <ImageView
             android:id="@+id/backArrow"
-            android:layout_width="@dimen/_24sdp"
-            android:layout_height="match_parent"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="@dimen/_10sdp"
+            android:tint="@color/black"
             android:src="@drawable/back_icon" />
 
         <com.wherego.delivery.user.Utils.MyTextView
