--- a/app/src/main/res/layout/activity_wallet.xml
+++ b/app/src/main/res/layout/activity_wallet.xml
@@ -15,8 +15,10 @@
         <ImageView
             android:id="@+id/backArrow"
             android:background="@drawable/back_icon"
-            android:layout_width="@dimen/_24sdp"
-            android:layout_height="@dimen/_32sdp"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:tint="@color/black"
+            android:src="@drawable/back_icon"
             android:layout_margin="10dp"
             />
 
@@ -157,21 +159,21 @@
                     android:id="@+id/money_et"
                     android:layout_width="wrap_content"
                     android:minWidth="@dimen/_64sdp"
-                    android:layout_height="wrap_content"
-
+                    android:layout_height="@dimen/_35sdp"
                     android:hint="0"
-                    android:inputType="numberDecimal"
+                    android:editable="false"
+                    android:inputType="none"
                     android:textSize="@dimen/_14sdp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_35sdp"
                     android:orientation="horizontal">
                     <Button
                         android:id="@+id/one"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_weight="1"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/_35sdp"
                         android:background="@drawable/border_stroke"
                         android:textSize="@dimen/_9sdp"
                         android:visibility="visible" />
@@ -182,9 +184,9 @@
 
                     <Button
                         android:id="@+id/two"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_weight="1"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/_35sdp"
                         android:background="@drawable/border_stroke"
                         android:textSize="@dimen/_9sdp"
                         android:visibility="visible" />
@@ -195,9 +197,9 @@
 
                     <Button
                         android:id="@+id/three"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_weight="1"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/_35sdp"
                         android:background="@drawable/border_stroke"
                         android:textSize="@dimen/_8sdp"
                         android:visibility="visible" />
