--- a/app/src/main/res/layout/activity_web_page.xml
+++ b/app/src/main/res/layout/activity_web_page.xml
@@ -16,8 +16,9 @@
             android:gravity="center_vertical">
             <ImageView
                 android:id="@+id/imgBack"
-                android:layout_width="@dimen/_24sdp"
-                android:layout_height="@dimen/_32sdp"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_gravity="center"
+                android:layout_height="@dimen/_20sdp"
                 android:src="@drawable/back_icon"/>
 
             <TextView
