--- a/app/src/main/res/layout/custom_payment_info.xml
+++ b/app/src/main/res/layout/custom_payment_info.xml
@@ -50,7 +50,7 @@
         <TextView
             android:layout_width="@dimen/_100sdp"
             android:layout_height="wrap_content"
-            android:text="Compaly Name : "
+            android:text="Company Name : "
             android:textColor="@color/black"
             android:textSize="@dimen/_12sdp"
             android:textStyle="bold" />
