--- a/app/src/main/res/layout/fragment_soruce_and_destination.xml
+++ b/app/src/main/res/layout/fragment_soruce_and_destination.xml
@@ -28,11 +28,12 @@
 
                 <ImageView
                     android:id="@+id/backArrow"
-                    android:layout_width="@dimen/_24sdp"
-                    android:layout_height="@dimen/_32sdp"
+                    android:layout_width="@dimen/_20sdp"
+                    android:layout_gravity="center"
+                    android:layout_height="@dimen/_20sdp"
                     android:layout_marginStart="16dp"
-                    android:layout_alignParentLeft="true"
                     android:layout_marginTop="@dimen/_8sdp"
+                    android:tint="@color/black"
                     android:src="@drawable/back_icon" />
 
                 <com.wherego.delivery.user.Utils.MyTextView
